# zeroclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  NOTICE  README.el.md  README.fr.md  README.ja.md  README.md  README.ru.md  README.vi.md  README.zh-CN.md  SESSION_CONTEXT.md  azure-pipelines-release.yml  azure-pipelines.yml  docker-compose.yml  install.sh
.cargo/: config.toml
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature_request.yml
.github/security/: deny-ignore-governance.json  gitleaks-allowlist-governance.json
clients/android-bridge/: Cargo.toml  build.rs
clients/android-bridge/src/: zeroclaw.udl
docs/: DOCUMENTATION.md  DOCUMENTATION_CN.md  README.el.md  README.fr.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  README_CN.md  SUMMARY.fr.md  SUMMARY.gr.md  SUMMARY.ja.md  SUMMARY.md  SUMMARY.ru.md  SUMMARY.zh-CN.md  android-setup.md  channels-reference.md  ci-map.md  commands-reference.md  config-reference.md  docs-inventory.md  i18n-coverage.md  main-branch-flow.md  one-click-bootstrap.md  pr-workflow.md  providers-reference.md  release-process.md  reviewer-playbook.md
docs/i18n/: README.md
scripts/: bootstrap.sh  configure-branch-protection.sh  deploy-rpi.sh  rpi-config.toml  zeroclaw.service
site/: android-install.html
src/: lib.rs  main.rs  util.rs
test_helpers/: generate_test_messages.rs
tests/: agent_e2e.rs  config_schema.rs  memory_comparison.rs  openai_codex_vision_e2e.rs
(+225 files in other folders)
